--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
     "@inngest/agent-kit": "^0.8.0",
     "@prisma/client": "^6.9.0",
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
